--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
