--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
+    "recharts": "^3.7.0",
     "remark-gfm": "^4.0.1",
     "zustand": "^5.0.9"
   },
