--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "html-react-parser": "^5.2.11",
     "lucide-react": "^0.562.0",
+    "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
