--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "html-react-parser": "^5.2.11",
+    "katex": "^0.16.28",
     "lucide-react": "^0.562.0",
     "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
