--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
+    "react-virtuoso": "^4.18.1",
     "recharts": "^3.7.0",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
